add boilerplate for new fiuselist like content endpoint
