# storage/api-docs/api-docs.json
@@ -397,6 +397,42 @@
                     }
                 }
             }
+        },
+        "/api/fiuselist/like/{id}": {
+            "post": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "tags": [
+                    "Fiuselist"
+                ],
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "required": true,
+                        "description": "Numeric ID of the content to get."
+                    }
+                ],
+                "description": "Get one specific content",
+                "operationId": "App\\Http\\Controllers\\ContentController::show",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "401": {
+                        "description": "unauthorized"
+                    },
+                    "404": {
+                        "description": "Content not found"
+                    },
+                    "500": {
+                        "description": "server error"
+                    }
+                }
+            }
         }
     },
     "tags": [
